Layout overlapping fixed

--- a/src/index.css
+++ b/src/index.css
@@ -14,5 +14,9 @@ code {
 }
 
 .container input {
-  visibility: hidden;
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
 }
